<resources>
    <string name="app_name">Weathery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Location</string>
    <string name="notifications">Notifications</string>
    <string name="units">Units</string>
    <string name="language">Language</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="standard">Standard</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="home">Home</string>
    <string name="fav">Favorites</string>
    <string name="settings">Settings</string>
    <string name="alert">Alert</string>
    <string name="alarm">Alarms</string>
    <string name="no_favorites_yet">No Favorites yet!</string>
    <string name="no_alarm_yet">No Alarm yet!</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="pressure">Pressure</string>
    <string name="last_update">Last update</string>
    <string name="visibility">Visibility</string>
    <string name="low">L: </string>
    <string name="high">H: </string>
    <string name="today">Today</string>
    <string name="delete_item">Delete Item</string>
    <string name="sure_delete">Are you sure you want to delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unknown">Unknown</string>
    <string name="changes_saved">Changes have been saved</string>
    <string name="dismiss">Dismiss</string>
    <string name="save">Save</string>
    <string name="enddate">End Date</string>
    <string name="endtime">End Time</string>
    <string name="starttime">Start Time</string>
    <string name="warning">Warning</string>
    <string name="permission_not_granted">Permissions not granted!</string>
    <string name="permission_request">Permission request</string>
    <string name="alarm_permission">Allow the app to display alarms over other apps?</string>
    <string name="allow">Allow</string>


</resources>