<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/weatherFragment">

    <fragment
        android:id="@+id/weatherFragment"
        android:name="com.example.weathery.weatherscreen.view.WeatherFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_weather" />
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.weathery.favorites.view.FavoritesFragment"
        android:label="@string/fav"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/alertsFragment"
        android:name="com.example.weathery.alerts.view.AlertsFragment"
        android:label="@string/alert"
        tools:layout="@layout/fragment_alerts" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.weathery.settings.view.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>