<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="4dp"
    tools:context=".settings.view.SettingsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="32dp"
        app:cardBackgroundColor="@color/my_light_primary"
        app:cardCornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/notifications"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="264dp"
        app:cardBackgroundColor="@color/my_light_primary"
        app:cardCornerRadius="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/units"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        app:cardBackgroundColor="@color/my_light_primary"
        app:cardCornerRadius="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/location"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        app:cardBackgroundColor="@color/my_light_primary"
        app:cardCornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/language"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elevation="2dp"
        app:cardBackgroundColor="@color/my_transparent_primary"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView">


        <RadioGroup
            android:id="@+id/radio_gp_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="16dp"
            android:gravity="center">

            <RadioButton
                android:id="@+id/radio_button_gps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gps" />

            <RadioButton
                android:id="@+id/radio_button_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/map" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        app:cardBackgroundColor="@color/my_transparent_primary"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView3">


        <RadioGroup
            android:id="@+id/radio_gp_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="16dp"
            android:gravity="center">

            <RadioButton
                android:id="@+id/radio_button_en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/english" />

            <RadioButton
                android:id="@+id/radio_button_ar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/arabic" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elevation="2dp"
        app:cardBackgroundColor="@color/my_transparent_primary"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView5"
        app:layout_constraintStart_toStartOf="@+id/cardView5"
        app:layout_constraintTop_toBottomOf="@+id/cardView5">


        <RadioGroup
            android:id="@+id/radio_gp_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="16dp"
            android:gravity="center">

            <RadioButton
                android:id="@+id/radio_button_metric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/metric" />

            <RadioButton
                android:id="@+id/radio_button_imperial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imperial" />

            <RadioButton
                android:id="@+id/radio_button_standard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/standard" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        app:cardBackgroundColor="@color/my_transparent_primary"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView4"
        app:layout_constraintStart_toStartOf="@+id/cardView4"
        app:layout_constraintTop_toTopOf="@+id/cardView6">


        <RadioGroup
            android:id="@+id/radio_gp_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="16dp"
            android:gravity="center">

            <RadioButton
                android:id="@+id/radio_button_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enable" />

            <RadioButton
                android:id="@+id/radio_button_off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disable" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>